--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.25.0",
+    "localforage": "^1.5.0",
     "moment": "^2.18.1",
     "quasar-extras": "0.x",
     "quasar-framework": "^0.14.1",
